@@ -32,6 +32,7 @@
 * Dev - Validation hints for WordPress.DB.SlowDBQuery.slow_db_query_meta_query.
 * Dev - Improved code formatting.
 * Dev - Revised welcome processing sanitation to use own API functions.
+* Dev - Revised posts etc. admin screens sanitation to use own API funtions, revised logic and removed unused declarations.
 
 2026-01-05 - version 3.10.0
 * Update - WordPress 6.9 compatible.
